<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SnakeGameActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/game_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#8BC34A"
        app:subtitleTextColor="@color/action_bar_text_color"
        app:titleTextColor="@color/action_bar_text_color" />

    <RelativeLayout
        android:id="@+id/sub_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/score_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/score_label_text"
            android:textColor="@color/primary_text_color"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:layout_toEndOf="@+id/score_label"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/default_score_text"
            android:textColor="#015E05"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/score_best_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/default_score_text"
            android:textColor="@color/action_bar_text_color"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginLeft="320dp"/>

    </RelativeLayout>

    <com.sahil.snakegame.views.SquareFrameLayout
        android:id="@+id/game_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/frame_canvas_background">

        <com.sahil.snakegame.views.GameView
            android:id="@+id/game_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
             />


    </com.sahil.snakegame.views.SquareFrameLayout>

    <com.sahil.snakegame.views.SquareLinearLayout
        android:id="@+id/direction_buttons"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/first_row_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/arrow_up_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_up_selector"
                android:contentDescription="@string/up_button_description" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/second_row_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/arrow_left_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_left_selector"
                android:contentDescription="@string/left_button_description" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/arrow_right_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_right_selector"
                android:contentDescription="@string/right_button_description" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/third_row_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/arrow_down_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button_down_selector"
                android:contentDescription="@string/down_button_description" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

    </com.sahil.snakegame.views.SquareLinearLayout>
</LinearLayout>